--- a/web/Index.html
+++ b/web/Index.html
@@ -499,10 +499,42 @@
     .label-inline {
       display: inline
     }
+
+    /* --- Branding Header --- */
+.brand-header {
+  text-align: center;
+  padding: 16px 0 20px 0;
+  border-bottom: 1px solid var(--border);
+  margin-bottom: 20px;
+  background: linear-gradient(180deg, var(--card), var(--card2));
+  border-radius: 0 0 20px 20px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+}
+
+.brand-header h1 {
+  margin: 0;
+  font-size: 1.8rem;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+  color: var(--fg);
+}
+
+/* Bluish-grey color for "Tercio Labs" */
+.brand-header .brand-name {
+  background: linear-gradient(90deg, #60a5fa, #93c5fd);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 700;
+  filter: drop-shadow(0 0 2px rgba(96,165,250,0.3));
+}
   </style>
 </head>
 
 <body>
+  <header class="brand-header">
+    <h1>Tercio Labs <span>– Web Control UI</span></h1>
+  </header>
   <div class="app">
     <div class="card">
       <div class="dev-header2">
@@ -550,8 +582,8 @@
               <span class="label-inline">Target (<span id="targetUnits">rad</span>)</span>
               <input type="number" id="inTarget" step="0.001" value="0.50">
             </label>
-            <label>Speed limit (rps)<input type="number" id="inRps" step="0.01" value="5.0"></label>
-            <label>Accel limit (rps²)<input type="number" id="inRps2" step="0.1" value="25.0"></label>
+            <label>Speed limit (rps)<input type="number" id="inRps" step="0.01" value="25.0"></label>
+            <label>Accel limit (rps²)<input type="number" id="inRps2" step="0.1" value="150.0"></label>
             <label>Current (mA)<input type="number" id="inmA" step="1" value="1200"></label>
           </div>
           <div class="toolbar" style="margin-top:8px">
@@ -602,13 +634,16 @@
                   class="knob"></span></span><span>Encoder Invert</span></label>
             <label class="toggle gated"><input id="tglDirInvert" type="checkbox"><span class="switch"><span
                   class="knob"></span></span><span>Direction Invert</span></label>
+            <!-- NEW: External SPI (write-only) -->
+            <label class="toggle gated"><input id="tglExtSPI" type="checkbox"><span class="switch"><span
+                  class="knob"></span></span><span>External SPI</span></label>
           </div>
 
           <div class="section-title" style="margin-top:12px">
             <h3 style="margin:0;font-size:16px">PID</h3>
           </div>
           <div class="grid">
-            <label>Kp<input id="pidKp" type="number" step="0.001" value="5.0"></label>
+            <label>Kp<input id="pidKp" type="number" step="0.001" value="3.0"></label>
             <label>Ki<input id="pidKi" type="number" step="0.001" value="0.0"></label>
             <label>Kd<input id="pidKd" type="number" step="0.001" value="0.0"></label>
           </div>
@@ -621,7 +656,7 @@
           </div>
           <div class="grid">
             <label>Offset<input id="homeOffset" type="number" step="0.001" value="0.0"></label>
-            <label>Speed (rps)<input id="homeSpeed" type="number" step="0.01" value="1.0"></label>
+            <label>Speed (rps)<input id="homeSpeed" type="number" step="0.01" value="15.0"></label>
           </div>
           <div class="toolbar" style="flex-wrap:wrap">
             <label class="toggle gated"><input id="homeUseMin" type="checkbox" checked><span class="switch"><span
@@ -702,7 +737,7 @@
         TARGET_ANGLE: 0x01, SET_CURRENT_MA: 0x02, SET_SPEED_LIMIT: 0x03, SET_PID: 0x04, SET_ID: 0x05,
         SET_MICROSTEPS: 0x06, SET_STEALTHCHOP: 0x07, SET_EXT_MODE: 0x08, SET_UNITS: 0x09, SET_ENC_INVERT: 0x0A,
         SET_ENABLED: 0x0B, SET_STEPS_PER_REV: 0x0C, DO_CALIBRATE: 0x0D, DO_HOMING: 0x0E, SET_ENDSTOP: 0x0F,
-        SET_EXT_ENCODER: 0x10, SET_ACCEL_LIMIT: 0x11, SET_DIR_INVERT: 0x12,
+        SET_EXT_ENCODER: 0x10, SET_ACCEL_LIMIT: 0x11, SET_DIR_INVERT: 0x12, SET_EXT_SPI: 0x13,
         TELEMETRY: 0x01, GET_CONFIG: 0x20
       };
       const TELEMETRY_CAN_ID = 0x000;
@@ -743,7 +778,7 @@
       const inTarget = $('inTarget'), inRps = $('inRps'), inRps2 = $('inRps2'), inmA = $('inmA');
       const tglEnable = $('tglEnable');
       const newIdEl = $('newId'), msEl = $('ms'), sprEl = $('spr');
-      const tglUnitsDeg = $('tglUnitsDeg'), tglStealth = $('tglStealth'), tglExtEnc = $('tglExtEnc'), tglExtMode = $('tglExtMode'), tglEndstop = $('tglEndstop'), tglEncInvert = $('tglEncInvert'), tglDirInvert = $('tglDirInvert');
+      const tglUnitsDeg = $('tglUnitsDeg'), tglStealth = $('tglStealth'), tglExtEnc = $('tglExtEnc'), tglExtMode = $('tglExtMode'), tglEndstop = $('tglEndstop'), tglEncInvert = $('tglEncInvert'), tglDirInvert = $('tglDirInvert'), tglExtSPI = $('tglExtSPI');
       const pidKp = $('pidKp'), pidKi = $('pidKi'), pidKd = $('pidKd');
       const homeOffset = $('homeOffset'), homeSpeed = $('homeSpeed'), homeUseMin = $('homeUseMin'), homeActiveLow = $('homeActiveLow'), homeDirPlus = $('homeDirPlus');
       const tlmSpeed = $('tlmSpeed'), tlmAngle = $('tlmAngle'), tlmTemp = $('tlmTemp'), tlmMin = $('tlmMin'), tlmMax = $('tlmMax'), tlmCal = $('tlmCal');
@@ -896,6 +931,7 @@
         tglEndstop.checked = !!(flags & FL.ENDSTOP);
         tglEncInvert.checked = !!(flags & FL.ENCINV);
         tglDirInvert.checked = !!(flags & FL.DIRINV);
+        tglEnable.checked = true;
       }
 
       function syncFormFromState(id) {
@@ -906,7 +942,7 @@
         const u = $('tglUnitsDeg');
         if (u) { u.indeterminate = false; u.checked = isDeg; }
 
-        // Flags bitfield
+        // Flags bitfield (from telemetry)
         const fl = st.flags ?? 0;
         const setCB = (el, on) => { if (!el) return; el.indeterminate = false; el.checked = !!on; };
 
@@ -930,6 +966,9 @@
         $('targetUnits').textContent = isDeg ? 'deg' : 'rad';
         $('btn90').textContent = isDeg ? '90°' : 'π/2';
         $('btn180').textContent = isDeg ? '180°' : 'π';
+
+        // External SPI (no telemetry) — keep last user value if set
+        if (st.extSpi != null) { const el = $('tglExtSPI'); if (el) { el.indeterminate = false; el.checked = !!st.extSpi; } }
       }
 
 
@@ -1038,6 +1077,17 @@
       tglEndstop.onchange = () => { if (store.activeId == null) return; sendBytes(frame.bool1(store.activeId, CMD.SET_ENDSTOP, tglEndstop.checked)); };
       tglEncInvert.onchange = () => { if (store.activeId == null) return; sendBytes(frame.bool1(store.activeId, CMD.SET_ENC_INVERT, tglEncInvert.checked)); };
       tglDirInvert.onchange = () => { if (store.activeId == null) return; sendBytes(frame.bool1(store.activeId, CMD.SET_DIR_INVERT, tglDirInvert.checked)); };
+
+      // NEW: External SPI (write-only; not in telemetry)
+      tglExtSPI.onchange = () => {
+        if (store.activeId == null) return;
+        const id = store.activeId;
+        const checked = tglExtSPI.checked;
+        sendBytes(frame.bool1(id, CMD.SET_EXT_SPI, checked));
+        const st = store.devices.get(id) || {};
+        st.extSpi = checked; // remember locally
+        store.devices.set(id, st);
+      };
 
       $('btnApplyPID').onclick = () => { if (store.activeId == null) return; const id = store.activeId; sendBytes(frame.pid(id, parseFloat(pidKp.value) || 0, parseFloat(pidKi.value) || 0, parseFloat(pidKd.value) || 0)); };
 
